--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <td class="stem-subject">Технология</td>
         <td class="arts-subject">ИЗО<br><small>История искусств, композиция, работа с разными материалами</small></td>
         <td class="stem-subject">Биология</td>
-        <td class="arts-subject">Музыка<br><small>История музыки, анализ произведений, вокал</small></td>
+        <td class="arts-subject">Музыка<br><small>Написание музыки в ableton</small></td>
       </tr>
       
       <tr class="break">
@@ -302,8 +302,8 @@
         <td class="time-col">14:20 — 15:30</td>
         <td colspan="5" style="text-align:left;">
           <strong>Дополнительные занятия после школы:</strong>
-          <ul>
-            <li><span class="stem-subject">Кружок робототехники/программирования</span> (Python, C++, Scratch)</li>
+          <ul>R
+            <li><span class="stem-subject">Кружок робототехники/программирования</span> (Python, C++, Rust)</li>
             <li><span class="stem-subject">Подготовка к олимпиадам</span> по математике, физике, информатике</li>
             <li><span class="stem-subject">Углубленный английский</span> (разговорный + технический, подготовка к TOEFL)</li>
             <li><span class="stem-subject">Научные проекты</span> (работа с Arduino, простые исследования)</li>
